# quantile-diffusion-mia

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
SecMI/: .gitignore  inference.sh  inference_quantile.sh  requirements.txt  terror.sh
SecMI/experiments/: influence-terror-correlation.ipynb
SecMI/mia_evals/: dataset_utils.py  secmia.py  secmia_data.py  t_errors.py
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
notebooks/: 0.01-nk-reconstructed-images.ipynb  0.02-nk-evaluation-t-errors.ipynb  0.03-nk-baseline-evaluation.ipynb  0.04-nk-dataloader-speed.ipynb  2.00-nk-model-parameters.ipynb  2.01-nk-quantile_regression_evaluation.ipynb  2.02-nk-bagged-qr-evaluation.ipynb
quantile_diffusion_mia/: __init__.py  config.py  dataset.py  features.py  plots.py  utils.py
quantile_diffusion_mia/modeling/: predict.py  resnet.py  train.py
wandb/: latest-run
wandb/run-20241123_184643-k9v4nnu6/: run-k9v4nnu6.wandb
wandb/run-20241123_184823-49fdzo7s/: run-49fdzo7s.wandb
wandb/run-20241123_184955-667e73xx/: run-667e73xx.wandb
wandb/run-20241123_185228-kjvu9uqv/: run-kjvu9uqv.wandb
wandb/run-20241123_185530-8qdfynsa/: run-8qdfynsa.wandb
wandb/run-20241123_190124-qduxnrgv/: run-qduxnrgv.wandb
wandb/run-20241123_190318-87r7opwy/: run-87r7opwy.wandb
wandb/run-20241123_190508-q6kap2k1/: run-q6kap2k1.wandb
wandb/run-20241123_190912-qb5v3ll1/: run-qb5v3ll1.wandb
wandb/run-20241123_191435-mo5jpw20/: run-mo5jpw20.wandb
wandb/run-20241123_191536-7e7krgci/: run-7e7krgci.wandb
wandb/run-20241123_191812-j8nfwitt/: run-j8nfwitt.wandb
(+213 files in other folders)
